--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,17 @@ body{
     font-weight: 700;
 }
 /* --- --- --- --- --- --- --- --- --- --- --- */
-/* --- Header --- */
+/* --- hero --- */
 /* --- --- --- --- --- --- --- --- --- --- --- */
-.header-container{
-    height: 103vh;
+.hero-container{
+    height: 110vh;
     width: 100vw;
     background: url('../img/header.jpeg') no-repeat;
     background-size: cover;
     position: relative;
+    overflow: hidden;
 }
-.header-center{
+.hero-center{
     height: 100%;
     width: 100%;
     display: flex;
@@ -23,23 +24,23 @@ body{
     flex-direction: column;
     text-align: center;
 }
-.header-title{
+.hero-title{
     font-family: 'Raleway';
     font-size: 15vw;
     color: #FFF;
     overflow: hidden;
 }
-.header-desc{
+.hero-desc{
     font-family: 'Raleway';
     font-weight: 300;
     color: #FFF;
     font-size: 26px;
 }
-.header-desc > span{
+.hero-desc > span{
     display: inline-block;
     min-height: 25px;
 }
-.header-desc > .hero-cursor::after{
+.hero-desc > .hero-cursor::after{
     content: ' ';
     display: inline-block;
     height: 30px;
@@ -47,17 +48,40 @@ body{
     width: 2px;
     background: #FFF;
 }
-.header-desc > .hide::after .header-desc > .hero-cursor::after{
+.hero-desc > .hide::after .hero-desc > .hero-cursor::after{
     opacity: 0;
 }
 .hero-highlight{
     background: rgba(164, 205, 255, 0.5);
     /*color: #2A3A3F;*/
 }
-.header-heart{
+.hero-heart{
     font-size: 0.7em;
     padding: 5px;
     color: #FF4B3B;
+}
+.hero-curve{
+    position: absolute;
+    bottom: 0;
+    left: -1%;
+    width: 102%;
+    height: 100px;
+    border-radius: 50%;
+    box-shadow: 0 31px 0 30px #FACE8C;
+    background-color: none;
+}
+.hero-down{
+    display: inline-block;
+    margin: 13vh 0 0 0;
+    color: #FFF;
+    border: 2px solid #FFF;
+    width: 50px;
+    height: 50px;
+    line-height: 53px;
+    text-align: center;
+    border-radius: 50%;
+    font-size: 30px;
+    cursor: pointer;
 }
 
 .nav-container{
@@ -86,74 +110,9 @@ body{
     color: #97A5C7;
     /*border-bottom: 3px solid #FFF;*/
 }
-/* --- --- --- --- --- --- --- --- --- --- --- */
-/* --- Competences --- */
-/* --- --- --- --- --- --- --- --- --- --- --- */
-.competence-container{
-    padding: 7% 20% 0 20%;
-    background: #C2392D;
-    overflow: hidden;
-    position: relative;
-}
-.competence-title{
-    position: absolute;
-    top: 40px;
-    left: 0;
-    text-align: right;
-    line-height: 20vw;
-    font-family: 'Bebas Neue';
-    color: #222;
-    opacity: 0.12;
-    font-size: 23.2vw;
-}
-.competence-rows{
-    display: flex;
-    flex-wrap:wrap;
-}
-.competence-item-container{
-    display: inline-block;
-    flex-grow: 1;
-    width: calc(100% * (1/3));
-    padding-top: calc(100% * (1/3));
-    position: relative;
-}
-.competence-item{
-    position: absolute;
-    top:0;
-    left: 0;
-    margin: 18%;
-    width: 64%;
-    height: 64%;
-    border-radius: 50%;
-    background-color: #FFF;
-    border: 5px solid #FFF;
-    color: #C2392D;
-    font-size: 5vw;
-    text-align: center;
-    font-family: 'Raleway';
-    transition: 0.5s;
-    transition-property: background, color;
-    cursor: pointer;
-}
-.competence-item:hover{
-    background:none;
-    color: #FFF;
-}
-.competence-item-title{
-    text-align: center;
-    position: absolute;
-    top:0;
-    left: 0;
-    color: #FFF;
-    font-size: 2.5vw;
-    text-align: center;
-    font-family: 'Raleway';
-    transition: background-color 0.5s;
-    width: 100%;
-}
-.competence-item-text{
-    display: inline-block;
-    padding: 4vw 0;
+.projects-container{
+    background:#FACE8C;
+    padding: 100px 0;
 }
 /* ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- */
 /* -- Footer -- */
